[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/mobs/Mob.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Mob" type="PathFollow2D"]
rotate = false
loop = false
lookahead = 48.0
script = ExtResource( 1 )

[node name="Area" type="Area2D" parent="."]

[node name="MobSize" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area"]

[node name="Health" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = 24.0
margin_right = 24.0
margin_bottom = 38.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="Timers" type="Node2D" parent="."]

[node name="StartRegen" type="Timer" parent="Timers"]
one_shot = true

[node name="EnableReflect" type="Timer" parent="Timers"]
one_shot = true

[node name="EnableDodge" type="Timer" parent="Timers"]
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timers/StartRegen" to="." method="_on_StartRegen_timeout"]
[connection signal="timeout" from="Timers/EnableReflect" to="." method="_on_EnableReflect_timeout"]
[connection signal="timeout" from="Timers/EnableDodge" to="." method="_on_EnableDodge_timeout"]
